standardize object contributor markdown sections for 2019.10.03 objects

--- a/_items/2019-10-03-0003.md
+++ b/_items/2019-10-03-0003.md
@@ -19,7 +19,7 @@ tags: [ tradition, birthday, celebration ]
 
 This "Happy Birthday" banner has been used in numerous birthdays here at Indiana University (IU) over the last 20 years. The owner of the banner normally plans the celebrations that take place in her office at IU.  This banner is both a prompt and a reminder that colleagues are invited to celebrate milestones together despite the artifical barrers created by cubicle walls.  
 
->*Well generally the current office I’m in is a cube farm so there’s forty, fifty cubes in a single area and you'll get some murmurings and some talking occasionally but most the time it is really, really unusually quiet for having so many people in it and then as soon as any sort of party or gathering happens all of a sudden there's just like a cacophony of noise everyone's chit-chatting and talking and laughing and a lot of times there's food or there's, you know, silly decorations like this and it's just it's a lot more fun when something like that’s happening so it gets a lot louder.*
+>Well generally the current office I’m in is a cube farm so there’s forty, fifty cubes in a single area and you'll get some murmurings and some talking occasionally but most the time it is really, really unusually quiet for having so many people in it and then as soon as any sort of party or gathering happens all of a sudden there's just like a cacophony of noise everyone's chit-chatting and talking and laughing and a lot of times there's food or there's, you know, silly decorations like this and it's just it's a lot more fun when something like that’s happening so it gets a lot louder.
 
 ## Celebrations as a Sense of Belonging
 ### A History Harvest Perspective
