--- a/_items/2019-10-03-0006.md
+++ b/_items/2019-10-03-0006.md
@@ -4,7 +4,7 @@ title: Kleen Kanteen
 author: Matthew Landini
 itemid: 2019-10-03-0006
 imagecredit: Maksymilian Szostalo
-itemcontributor: Anonymous Contributor
+itemcontributor: anonymous object contributor
 itemcreator: Klean Kanteen
 itemsubject: Reuseable Thermos
 itemdategot: N/A
@@ -18,7 +18,7 @@ tags: [ Ritual ]
 
 Reusable waterbottles and thermoses have become a growing trend and means of self expression over the last couple of years, with the ability to customize them via website ordering with designs and initals, to using stickers, which in and of themselves have become a form of expression. Many people today, especially older-teens and young adults, use them to identify with areas, cultures, or other forms of significance to them.[^1]
 
->*I'm almost never without this object.  It's black. It was once matte black, but it's now very beat up. You can see the silver. It's a silver thermos that was powder-coated or whatever matte black and is now dinged up, scraped up, has a sippy lid on top, has a couple of stickers on it. One sticker's so faded you can't see what it once was, another sticker is not so faded.  It says a fair bit about the places to which, with which I identify.*
+>I'm almost never without this object.  It's black. It was once matte black, but it's now very beat up. You can see the silver. It's a silver thermos that was powder-coated or whatever matte black and is now dinged up, scraped up, has a sippy lid on top, has a couple of stickers on it. One sticker's so faded you can't see what it once was, another sticker is not so faded.  It says a fair bit about the places to which, with which I identify. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## Customization Culture in the Modern Day
 
