--- a/_items/2019-10-03-0007.md
+++ b/_items/2019-10-03-0007.md
@@ -24,4 +24,4 @@ In ties between the secondary source, Malachi the Dog, and the primary source, I
 
 ## From the Contributor
 
-Malachi the Dog is symbolic of many transitions in the owner's life. The first being a physical move. Malachi was adopted the day after Krista moved into her new apartment. This, in turn, morphed into a transition within itself as Malachi prompted Krista to be more active, social, and helped her find a new place within the Bloomington community. 
+>Malachi the Dog is symbolic of many transitions in the owner's life. The first being a physical move. Malachi was adopted the day after Krista moved into her new apartment. This, in turn, morphed into a transition within itself as Malachi prompted Krista to be more active, social, and helped her find a new place within the Bloomington community. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
