--- a/_items/2019-10-03-0008.md
+++ b/_items/2019-10-03-0008.md
@@ -4,7 +4,7 @@ title: Notable Medical Book
 author: Matthew Landini
 itemid: 2019-10-03-0008
 imagecredit: Maksymilian Szostalo
-itemcontributor: Nelson R Shaffer
+itemcontributor: Nelson R. Shaffer
 itemcreator: William R. LeFranu
 itemsubject: Medical Procedures from J.K. Lilly Jr.'s Collection
 itemdategot: 
@@ -27,7 +27,7 @@ If you would like to view this extensive collection, which includes writings on 
 
 ## From the Contributor
 
-> *I've, since a very young child, been very interested in how the world works and I learned at some point that you can make a living that way. Very rarely do young children get exposed to the thought that they can do something that they really love to do.*
+>I've, since a very young child, been very interested in how the world works and I learned at some point that you can make a living that way. Very rarely do young children get exposed to the thought that they can do something that they really love to do. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 
 [^1]: More information on this object: https://iucat.iu.edu/catalog/4891002
