--- a/_items/2019-10-03-0010.md
+++ b/_items/2019-10-03-0010.md
@@ -36,7 +36,7 @@ This Pano was brought to Bloomington, Indiana as a physical result of community 
 
 # From the Contributor
 
-I met it before I came to the US because I wanted to bring something cultural from my home country to show people here but similar items I used to see in my grandma's house when I was a kid. But now I don't see them anymore because everything is getting very modern and people they're becoming more, I don't know, modern or just they're losing the identity I guess I would say, culture. So it really reminds me [of] my grandma's house and things that my grandma used to do.
+>I met it before I came to the US because I wanted to bring something cultural from my home country to show people here but similar items I used to see in my grandma's house when I was a kid. But now I don't see them anymore because everything is getting very modern and people they're becoming more, I don't know, modern or just they're losing the identity I guess I would say, culture. So it really reminds me [of] my grandma's house and things that my grandma used to do. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 # Works Cited
 
