--- a/_items/2019-10-03-0011.md
+++ b/_items/2019-10-03-0011.md
@@ -4,7 +4,7 @@ title: Bike Helmet
 author: Matthew Landini
 itemid: 2019-10-03-0011
 imagecredit: Maksymilian Szostalo
-itemcontributor: Anonymous Contributor
+itemcontributor: anonymous object contributor
 itemcreator: Giro
 itemsubject: Bike Helmet
 itemdategot: N/A
@@ -27,7 +27,7 @@ It only takes a few minutes of walking around the streets of Bloomington, and In
 
 ## From the Contributor
 
->*Biking is my first priority [for staying healthy]. And biking in good weather is something I enjoy doing with my husband.
+>Biking is my first priority [for staying healthy]. And biking in good weather is something I enjoy doing with my husband. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 [^1]: Rissel, Chris. “Health Benefits of Cycling.” Cycling Futures, edited by Jennifer Bonham and Marilyn Johnson, University of Adelaide Press, South Australia, 2015, pp. 43–62. JSTOR, www.jstor.org/stable/10.20851/j.ctt1sq5x1g.8. Accessed 22 Feb. 2020.
  [^2]: “City of Bloomington, Indiana.” Biking in Bloomington | City of Bloomington, Indiana, bloomington.in.gov/transportation/bike.
