--- a/_items/2019-10-03-0012.md
+++ b/_items/2019-10-03-0012.md
@@ -18,7 +18,7 @@ tags: [ cosmetics, beauty shops, makeup, identity, lipstick, beauty culture, fas
 
 AJ perceives this lipstick as something that added value to sense of self-worth and confidence. It has defined and enhanced her personality. The lipstick and her face, to her, together create a work of art. She considers herself a beautiful plain canvas which can be filled with colors. This thought process resonates with Estee lauder’s definition of beauty which says that every face is unique. 
 
->*Lipstick is how I make myself known to the world. I love matching lipstick to my outfits and accessories and highlighting my beautiful lips that have been passed down in my family. I am black and Mexican, and full lips have been a marker in both communities and I love showing the world how proud I am of mine, as well as showing pride in my communities.*
+>Lipstick is how I make myself known to the world. I love matching lipstick to my outfits and accessories and highlighting my beautiful lips that have been passed down in my family. I am black and Mexican, and full lips have been a marker in both communities and I love showing the world how proud I am of mine, as well as showing pride in my communities. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## Makeup as a form of Empowerment
 
