--- a/_items/2019-10-03-0013.md
+++ b/_items/2019-10-03-0013.md
@@ -24,6 +24,6 @@ Other traditional forms of Chinese jewelry use gemstones such as jade, opal, and
 
 ## From the Contributor
 
->* Thirty years old, that is very important. I mean, a turning point of people's lives and I wear this necklace and I think I should live a better life.
+>Thirty years old, that is very important. I mean, a turning point of people's lives and I wear this necklace and I think I should live a better life. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 [^1]: Lucas, Andrew. “The Chinese Soul in Contemporary Jewelry Design.” Gems & Gemology, www.gia.edu/gems-gemology/spring-2015-chinese-soul-contemporary-jewelry-design.
