--- a/_items/2019-10-03-0014.md
+++ b/_items/2019-10-03-0014.md
@@ -4,7 +4,7 @@ title: Homemade t-shirts
 author: 
 itemid: 2019-10-03-0014
 imagecredit: 
-itemcontributor: Whitney riley
+itemcontributor: Whitney Riley
 itemcreator: 
 itemsubject: 
 itemdategot: 
