--- a/_items/2019-10-03-0018.md
+++ b/_items/2019-10-03-0018.md
@@ -24,4 +24,4 @@ These sneakers are unlike the others.  How items have no branding, but have suc
 
 ## From the Contributor
 
- I only wear these when I feel like I am going to end up having a really good day.  I would say today has been one of the best days I have worn them.  And, actually, the activities we have done.  Like I went shopping today, so thats always a good day.  And then this was my first time coming to First Thursdays.
+>I only wear these when I feel like I am going to end up having a really good day.  I would say today has been one of the best days I have worn them.  And, actually, the activities we have done.  Like I went shopping today, so thats always a good day.  And then this was my first time coming to First Thursdays. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
