--- a/_items/2019-10-03-0019.md
+++ b/_items/2019-10-03-0019.md
@@ -4,7 +4,7 @@ title: Jungkook Photocard
 author: 
 itemid: 2019-10-03-0019
 imagecredit: 
-itemcontributor: Lanya hayes
+itemcontributor: Lanya Hayes
 itemcreator: 
 itemsubject: 
 itemdategot: 
