--- a/_items/2019-10-03-0021.md
+++ b/_items/2019-10-03-0021.md
@@ -4,7 +4,7 @@ title: Prato
 author: Paul Centanni
 itemid: 2019-10-03-0021
 imagecredit: 
-itemcontributor: Anonymous Contributor
+itemcontributor: anonymous object contributor
 itemcreator: 
 itemsubject: 
 itemdategot: 
@@ -26,4 +26,4 @@ As samba dancing may seem daunghting at first, it is very easy to learn.  It is 
 https://www.youtube.com/watch?v=rMsRzvei_AI
 
 ## From the Contributor
-"So when you are in the circle you are a participant. When you're in the circle you're a participant. There's no such thing as an audience, no one is removed from the performance. The plate I think kind of represents the ethos of samba, in that it's a circular communal event. It's also a humble instrument, and rural samba musicians are usually farmers, working class people. Samba is famously versatile, so you know, even if you don't have an instrument you can still play--you can clap your hands, you can dance, you can tap your feet." 
+>So when you are in the circle you are a participant. When you're in the circle you're a participant. There's no such thing as an audience, no one is removed from the performance. The plate I think kind of represents the ethos of samba, in that it's a circular communal event. It's also a humble instrument, and rural samba musicians are usually farmers, working class people. Samba is famously versatile, so you know, even if you don't have an instrument you can still play--you can clap your hands, you can dance, you can tap your feet. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
