--- a/_items/2019-10-03-0005.md
+++ b/_items/2019-10-03-0005.md
@@ -31,7 +31,7 @@ Roughly 20.4 million Aerican's practice yoga (roughly 9%). [^3] Here in America,
 
 ## From the Contributor
  
->*I have multiple tattoos on one arm that reflect my identification of a community of people who seek comfort in the esoteric.*
+>I have multiple tattoos on one arm that reflect my identification of a community of people who seek comfort in the esoteric. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 [^1]: Study And Download Yoga Online, yogainternational.com/article/view/yoga-sutra-1-3-translation-and-commentary.
 [^2]: Newman, Meredith. “Report: More Young People Have Tattoos and Piercings than Ever Before.” USA Today, Gannett Satellite Information Network, 20 Sept. 2017, www.usatoday.com/story/news/nation-now/2017/09/20/young-people-tattoos-and-piercings-report/686360001/.
