--- a/_items/2019-10-03-0009.md
+++ b/_items/2019-10-03-0009.md
@@ -26,7 +26,7 @@ Through her craft, Kathy also teaches others the art of repurposing materials. S
 
 ## From the Contributor
 
->*I enjoy making things creatively and I belong to an extension homemakers club here in Bloomington. And we do a lot of handcrafts. And I've made several of these purses and I've taught other people how to make them, probably 20 people or so. Domestic Engineers.*
+>I enjoy making things creatively and I belong to an extension homemakers club here in Bloomington. And we do a lot of handcrafts. And I've made several of these purses and I've taught other people how to make them, probably 20 people or so. Domestic Engineers. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 [^1]: “Indiana University.” IUCAT, iucat.iu.edu/catalog/1386319.
 [^2]: “Reducing and Reusing Basics.” EPA, Environmental Protection Agency, 25 Nov. 2019, www.epa.gov/recycle/reducing-and-reusing-basics.
