--- a/_items/2019-10-03-0022.md
+++ b/_items/2019-10-03-0022.md
@@ -4,7 +4,7 @@ title: Guatemalan beaded lizard keychain
 author: Paul Centanni
 itemid: 2019-10-03-0022
 imagecredit: 
-itemcontributor: Anonymous Contributor
+itemcontributor: anonymous object contributor
 itemcreator: 
 itemsubject: 
 itemdategot: 
@@ -20,4 +20,4 @@ This was an item that comes from a Santa Fe street fair. This item is a Fair Tra
 
 ## From the Contributor
 
-One of the things that I like about these keychains is that even though they're from Guatemala--that's mostly where they're produced--you can find them just about anywhere, in any city. I've seen them all over the place, and so they're both a reminder of the places that I've been to (which doesn't include Guatemala) but they remind me that there is a larger community of artists and artisans who are sharing their gifts with the world.
+>One of the things that I like about these keychains is that even though they're from Guatemala--that's mostly where they're produced--you can find them just about anywhere, in any city. I've seen them all over the place, and so they're both a reminder of the places that I've been to (which doesn't include Guatemala) but they remind me that there is a larger community of artists and artisans who are sharing their gifts with the world. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
