standardize object contributor markdown sections for 2019.10.08 objects

--- a/_items/2019-10-08-0002.md
+++ b/_items/2019-10-08-0002.md
@@ -3,10 +3,11 @@ layout: item
 title: I am worthy
 author: 
 itemid: 2019-10-08-0002
-itemcontributor: 
+itemcontributor: Victoria A. Jones
 itemcreator: I am worthy social student group
 itemsubjecturl: http://id.loc.gov/authorities/subjects/sh85015782
 itemsubject: Pin 
+itemindianacity: Noblesville
 itemdate: ca. 2014
 itemtype: Physical Object
 shortdesc: Small navy blue pin, with red letters.   
@@ -22,4 +23,4 @@ It tells us how this girl joined a social group ran by an African American girl 
 
 ## From the Contributor
 
-This pin plays a major role in the history of that student and her experinece while at Indiana univeristy and specfically her experience within that group and how it really affected her life. 
+>This pin plays a major role in the history of that student and her experinece while at Indiana univeristy and specfically her experience within that group and how it really affected her life. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
