--- a/_items/2019-10-08-0004.md
+++ b/_items/2019-10-08-0004.md
@@ -4,7 +4,7 @@ title: Iphone
 author: Paul Centanni
 itemid: 2019-10-08-0004
 imagecredit: 
-itemcontributor: Anonymous Contributor
+itemcontributor: anonymous object contributor
 itemcreator: 
 itemsubject: 
 itemdategot: 
@@ -20,4 +20,4 @@ This is an iPhone X. It is a model that came back out a few years ago and has al
 
 ## From the Contributor
 
-So if I lose my phone, I lose everything I own in one shot, including my house keys which are right there. And then my IU ID, my debit card, my license. You have a lot of faith in this phone. I do have a lot of faith in this phone but it's always with me. Except for that time when it fell in the ocean.
+>So if I lose my phone, I lose everything I own in one shot, including my house keys which are right there. And then my IU ID, my debit card, my license. You have a lot of faith in this phone. I do have a lot of faith in this phone but it's always with me. Except for that time when it fell in the ocean. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
