--- a/_items/2019-10-08-0005.md
+++ b/_items/2019-10-08-0005.md
@@ -35,6 +35,6 @@ To learn more on hispanic and latino culture, check out [IU's La Casa] (https://
 
 ## From the Contributor
 
-One of the things that I miss about her is that I would go to her house every Sunday and we would just have coffee and eat bread and just talk about life. And this is what she—a lot of the time—she would be doing at the table and we’d be sitting there. **If I could bring that table, I would’ve brought that table**.
+>One of the things that I miss about her is that I would go to her house every Sunday and we would just have coffee and eat bread and just talk about life. And this is what she—a lot of the time—she would be doing at the table and we’d be sitting there. **If I could bring that table, I would’ve brought that table**. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ![This was the method used.](/H301HistoryHarvest/assets/images/networkanalysis2.PNG)!
