--- a/_items/2019-10-08-0001.md
+++ b/_items/2019-10-08-0001.md
@@ -20,7 +20,7 @@ These kente sashes are handmade sashes that are used as an accessory for special
 
 ## From the Contributor
 
-<p class=blockquote style=’font-size:115%;’>And this one finally my class in high school actually did this. It was exclusively for our class. The V to visual arts to the 2009-year group. That class was known to be notorious [laughs]. We had a strong relationship, we were very united, but we had challenges in school and whenever I see kind of this stole I remember all the different people and different talents. Even though currently we are scattered all over the world I believe that someday we will come back together and have this as a unifying kind of physical, tangible thing that we use… there is no industry equipment involved in this, they do it from hand by scratch.</p>
+>And this one finally my class in high school actually did this. It was exclusively for our class. The V to visual arts to the 2009-year group. That class was known to be notorious [laughs]. We had a strong relationship, we were very united, but we had challenges in school and whenever I see kind of this stole I remember all the different people and different talents. Even though currently we are scattered all over the world I believe that someday we will come back together and have this as a unifying kind of physical, tangible thing that we use… there is no industry equipment involved in this, they do it from hand by scratch. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## Identity Through One’s Cultural Identity 
 ### A History Harvest Perspective
