--- a/_items/2019-10-08-0003.md
+++ b/_items/2019-10-08-0003.md
@@ -20,4 +20,4 @@ This is a vanilla latte iced coffee from Coffee Bean and Tea Leaf cafe in Wells 
 
 ## From the Contributor
 
-<p class=blockquote style=’font-size:115%;’> Around this time of school year I get very fatigued and tired from studying. I’m studying for two midterms that I have this week and one next week. I’m usually at Wells for the entire day after my classes, so coffee keeps me going and keeps me focused so I can study better and longer. </p>
+>Around this time of school year I get very fatigued and tired from studying. I’m studying for two midterms that I have this week and one next week. I’m usually at Wells for the entire day after my classes, so coffee keeps me going and keeps me focused so I can study better and longer. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
