--- a/_items/2019-10-08-0006.md
+++ b/_items/2019-10-08-0006.md
@@ -23,6 +23,6 @@ The connection to the primary source is that this native Canadian woman has trib
 
 ## From the Contributor
 
-It just gives me a piece of my culture, home, and the family that’s back on the islands as well, so every time I see it gives me a since of like support.
+>It just gives me a piece of my culture, home, and the family that’s back on the islands as well, so every time I see it gives me a since of like support. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ![Network](/H301HistoryHarvest/assets/images/Networks.png)!
