standardize object contributor markdown sections for 2019.10.09 objects

--- a/_items/2019-10-09-0001.md
+++ b/_items/2019-10-09-0001.md
@@ -20,4 +20,4 @@ This pin has a picture of the contributor’s friend, who got her PhD, on it and
 
 ## From the Contributor
 
-<p class=blockquote style=’font-size:115%;’>When I was in undergrad, which wasn’t [at IU], getting an undergraduate degree seemed to be framed as something I just had to do. To succeed in society right now, you should have an undergraduate degree. So I kinda took it for granted that I was going to get this degree and graduate, and when I graduated I didn’t celebrate. When I went to Lindsay’s graduation party and saw party favors, food, drinks, and lots of fun, I decided that getting a PhD is something to actually celebrate. I felt that it’d actually feel like an accomplishment when I’d finish it. So I carry this pin around on my backpack, not only to remind me of my friend Lindsay, but to remind myself that getting a PhD is something that I’m working towards, and when I’m finally done, it’s gonna be a party! </p>
+>When I was in undergrad, which wasn’t [at IU], getting an undergraduate degree seemed to be framed as something I just had to do. To succeed in society right now, you should have an undergraduate degree. So I kinda took it for granted that I was going to get this degree and graduate, and when I graduated I didn’t celebrate. When I went to Lindsay’s graduation party and saw party favors, food, drinks, and lots of fun, I decided that getting a PhD is something to actually celebrate. I felt that it’d actually feel like an accomplishment when I’d finish it. So I carry this pin around on my backpack, not only to remind me of my friend Lindsay, but to remind myself that getting a PhD is something that I’m working towards, and when I’m finally done, it’s gonna be a party! {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
