--- a/_items/2019-10-09-0004.md
+++ b/_items/2019-10-09-0004.md
@@ -20,4 +20,4 @@ This is a scar on the contributor’s arm that represents a family tradition bet
 
 ## From the Contributor
 
-<p class=blockquote style=’font-size:115%;’>We have a tradition in my family where when kids are about four or five years old, we take them to go snipe hunting in the woods. What we describe as a snipe is a very small vicious bird, about 5 inches tall and blends in with sticks, that tries to attack you. We tell the kids that to be a Bueller, which is our last name, you have to catch one of these guys. So, we take [the kids] into the woods late at night and the older cousins will pretend to see them. They’ll say things like, “There’s one right there, go grab it! Oh you don’t see it? It’s right there!” We walk them around for about ten minutes and then one of the uncles pops up and scares them. I’ve got a couple little marks on my hands, like this one, and before we take the cousins out, we give them a big talk and tell them, “Look at like the scars on my hands, I got that during my first snipe hunt! Look, that’s where the bird got me. It hurts, but you’ll be okay. We’ll bandage you if it gets you,” and things like that. </p>
+>We have a tradition in my family where when kids are about four or five years old, we take them to go snipe hunting in the woods. What we describe as a snipe is a very small vicious bird, about 5 inches tall and blends in with sticks, that tries to attack you. We tell the kids that to be a Bueller, which is our last name, you have to catch one of these guys. So, we take [the kids] into the woods late at night and the older cousins will pretend to see them. They’ll say things like, “There’s one right there, go grab it! Oh you don’t see it? It’s right there!” We walk them around for about ten minutes and then one of the uncles pops up and scares them. I’ve got a couple little marks on my hands, like this one, and before we take the cousins out, we give them a big talk and tell them, “Look at like the scars on my hands, I got that during my first snipe hunt! Look, that’s where the bird got me. It hurts, but you’ll be okay. We’ll bandage you if it gets you,” and things like that. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
