--- a/_items/2019-10-09-0005.md
+++ b/_items/2019-10-09-0005.md
@@ -20,7 +20,7 @@ This piece of art was painted to continue a running joke between the Wheeler fam
 
 ## From the Contributor
 
-<p class=blockquote style=’font-size:115%;’>We would always watch [Star Trek] every Sunday morning. You know it was always on with syndication and what not. But we were driving home one night from shopping – and I don’t know what possessed my mom at the time –  but she took a straw, she started stabbing my dad on his shoulder and making like Gorn noises, “grrrrrrr.” We thought it was hilarious at the time and so it kept kinda popping up on occasion. It’s kind of a running gag in our family that the Gorn keeps showing up as random jokes. [When my mom]  took up painting again after years of not and decided that this was the one that was for me. It was just perfect. So yeah, she painted it for me, and I have to admit I’ve loved it since she gave it to me. And I’m glad I can share it with the random nerds that I’ve run into today.</p>
+>We would always watch [Star Trek] every Sunday morning. You know it was always on with syndication and what not. But we were driving home one night from shopping – and I don’t know what possessed my mom at the time –  but she took a straw, she started stabbing my dad on his shoulder and making like Gorn noises, “grrrrrrr.” We thought it was hilarious at the time and so it kept kinda popping up on occasion. It’s kind of a running gag in our family that the Gorn keeps showing up as random jokes. [When my mom]  took up painting again after years of not and decided that this was the one that was for me. It was just perfect. So yeah, she painted it for me, and I have to admit I’ve loved it since she gave it to me. And I’m glad I can share it with the random nerds that I’ve run into today. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## Fan Culture
 ### A History Harvest Perspective
