--- a/_items/2019-10-09-0006.md
+++ b/_items/2019-10-09-0006.md
@@ -20,4 +20,4 @@ This is a Harry Potter-themed tattoo. It is of Hogwarts, and it represents the c
 
 ## From the Contributor
 
-<p class=blockquote style=’font-size:115%;’> Harry Potter was a big part of my childhood, I grew up with it and it's always been my favorite. </p>
+>Harry Potter was a big part of my childhood, I grew up with it and it's always been my favorite. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
