--- a/_items/2019-10-09-0007.md
+++ b/_items/2019-10-09-0007.md
@@ -20,4 +20,4 @@ This is a Kingdom Hearts Pin from Disney.  Kingdom Hearts is a video game series
 
 ## From the Contributor
 
-Normally it's attached to the driver's side visor of my car. I just I have a bunch of them, this one is just the oldest one and I keep ‘em all up there.  For me it's the first game in the franchise I played, which is weird because it's the second one, but, and it just what opened me up to loving the franchise and what they were building and starting and embracing myself and the community that the game itself has built over the seventeen years it's been in production and I've met a lot of good, close friends through it so.
+>Normally it's attached to the driver's side visor of my car. I just I have a bunch of them, this one is just the oldest one and I keep ‘em all up there.  For me it's the first game in the franchise I played, which is weird because it's the second one, but, and it just what opened me up to loving the franchise and what they were building and starting and embracing myself and the community that the game itself has built over the seventeen years it's been in production and I've met a lot of good, close friends through it so. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
