standardize object contributor markdown sections for 2019.10.10 objects

--- a/_items/2019-10-10-0001.md
+++ b/_items/2019-10-10-0001.md
@@ -32,7 +32,7 @@ Individuality is a big part of life and all-around we are thought of as individu
 
 ## From the Contributor
 
-The significance. Well, I like to paint and for it to be on cleats I think it’s significant because cleats represent what I love to do, which is football. So, for me to put it on the most important necessity you need to play any sport, which is a pair of cleats, I think it makes it significant that I get to express myself on my footwear. 
+>The significance. Well, I like to paint and for it to be on cleats I think it’s significant because cleats represent what I love to do, which is football. So, for me to put it on the most important necessity you need to play any sport, which is a pair of cleats, I think it makes it significant that I get to express myself on my footwear. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ![Indiana History Network](/H301HistoryHarvest/assets/images/Networks.png)! 
 
