--- a/_items/2019-10-10-0005.md
+++ b/_items/2019-10-10-0005.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Small elastic bound note book
+title: Small Elastic Bound Note Book
 author: Ashley Hennessey
 itemid: 2019-10-10-0005
 imagecredit: 
@@ -20,4 +20,4 @@ This is a small, elastic bound notebook that the contributor got his freshman ye
 
 ## From the Contributor
 
-<p class=blockquote style=’font-size:115%;’> It’s one of those things where a thought comes to mind and you’re like ‘oh I don’t want to forget about that in case I want to like expand on it later,’ so then you write it down. I would say I’m a pretty positive kinda guy, I always look for the funny side of things because I don’t like to dwell on negative stuff. So I’ll try to take something awkward or sad and try to lighten the mood by writing down funny ideas or sketches that can be expanded on later. It reflects my positive, humorous attitude.</p>
+> It’s one of those things where a thought comes to mind and you’re like ‘oh I don’t want to forget about that in case I want to like expand on it later,’ so then you write it down. I would say I’m a pretty positive kinda guy, I always look for the funny side of things because I don’t like to dwell on negative stuff. So I’ll try to take something awkward or sad and try to lighten the mood by writing down funny ideas or sketches that can be expanded on later. It reflects my positive, humorous attitude. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
