--- a/_items/2019-10-10-0003.md
+++ b/_items/2019-10-10-0003.md
@@ -4,7 +4,7 @@ title: Water Bottle
 author: Ashley Hennessey
 itemid: 2019-10-10-0003
 imagecredit: 
-itemcontributor: Jack reasner
+itemcontributor: Jack Reasner
 itemcreator: 
 itemsubject: 
 itemdategot: 
@@ -20,4 +20,4 @@ This is a blue eco-friendly water bottle with an image of a kayak on it. The con
 
 ## From the Contributor
 
-<p class=blockquote style=’font-size:115%;’> It’s important to use reusable products because I like the outdoors. [This bottle] kinda just goes along with the low maintenance vibe of being like progressive and caring about the environment. I have a sticker that’s Picture Organic Living. It’s a company in France that makes coats and ski equipment and stuff out of recycled goods. I have like the REI co-op sticker which, honestly, I don’t really know what that means but I’m a member of it. I have a sticker from like Vans cause those are shoes I like to wear so I slap those on there. Then I have another sticker that says ‘a life outdoors is a life well lived’ and that’s also from REI.</p>
+>It’s important to use reusable products because I like the outdoors. [This bottle] kinda just goes along with the low maintenance vibe of being like progressive and caring about the environment. I have a sticker that’s Picture Organic Living. It’s a company in France that makes coats and ski equipment and stuff out of recycled goods. I have like the REI co-op sticker which, honestly, I don’t really know what that means but I’m a member of it. I have a sticker from like Vans cause those are shoes I like to wear so I slap those on there. Then I have another sticker that says ‘a life outdoors is a life well lived’ and that’s also from REI. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
