standardize object contributor markdown sections for 2019.10.11 objects

--- a/_items/2019-10-11-0002.md
+++ b/_items/2019-10-11-0002.md
@@ -30,4 +30,4 @@ Kimonos are a certain identity for Japan that reaches other continents world-wid
 
 ## From the Contributor
 
-My great grandfather was in World War II. He enlisted in 1943, went to Japan, and brought this back with him. When I was 16, I went on a student trip to Japan and he gave me this beautiful Kimono.
+>My great grandfather was in World War II. He enlisted in 1943, went to Japan, and brought this back with him. When I was 16, I went on a student trip to Japan and he gave me this beautiful Kimono. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
