--- a/_items/2019-10-11-0001.md
+++ b/_items/2019-10-11-0001.md
@@ -20,7 +20,7 @@ This is a scrapbook that is still currently in the process of being created by t
 
 ## From the Contributor
 
-<p class=blockquote style=’font-size:115%;’>It's a scrapbook, mainly about the temple that IU once owned for many years which was never erected on the Bloomington campus, but it has connections with South Bend and Bloomington. I made it and starting in 2016 and I'm still working on it and it's a gift for my family for my son and grandson and on and on I hope. I used to be the India Studies and Tibetan Studies librarian and it originated in research in the IU archives that got more and more interesting as I saw the connections. It had photographs, historic photographs. It has some things I wasn't sure about the rights to. You know, clippings from books and so on so I am not digitizing them. It has watercolor drawings; it has the main part I'm giving to the creative commons is chronology of the temple that I gleaned from the IU archives and from other sources so the biggest part is about ten pages that summarize that. American Chinese, Germans, Swedes, and Tibetans with others of unknown ethnicity play roles in this consternation scrapbook about historical preservation and lack of preservation.</p>
+>It's a scrapbook, mainly about the temple that IU once owned for many years which was never erected on the Bloomington campus, but it has connections with South Bend and Bloomington. I made it and starting in 2016 and I'm still working on it and it's a gift for my family for my son and grandson and on and on I hope. I used to be the India Studies and Tibetan Studies librarian and it originated in research in the IU archives that got more and more interesting as I saw the connections. It had photographs, historic photographs. It has some things I wasn't sure about the rights to. You know, clippings from books and so on so I am not digitizing them. It has watercolor drawings; it has the main part I'm giving to the creative commons is chronology of the temple that I gleaned from the IU archives and from other sources so the biggest part is about ten pages that summarize that. American Chinese, Germans, Swedes, and Tibetans with others of unknown ethnicity play roles in this consternation scrapbook about historical preservation and lack of preservation. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## The World’s Fair, This Temple, & Indiana University
 ### A History Harvest Perspective
