--- a/_items/2019-10-11-0003.md
+++ b/_items/2019-10-11-0003.md
@@ -20,4 +20,4 @@ This is a baby blanket that has the word "Baby" stitched in with different color
 
 ## From the Contributor
 
-It has never been out of my possession. Between moving about sixteen times, moving three different states and it's always either been on my bed, underneath it in like a storage container, just making sure that it can't get damaged any more than it actually is. It's really the, it's the first thing that I ever really "owned", quote unquote. And it's also just, like I said, it's comforting it's just something that I've always been able to kind of ground myself in and also it's really the only thing from my childhood that goes so far back to a really happy moment or really happy connection that I can make. 
+>It has never been out of my possession. Between moving about sixteen times, moving three different states and it's always either been on my bed, underneath it in like a storage container, just making sure that it can't get damaged any more than it actually is. It's really the, it's the first thing that I ever really "owned", quote unquote. And it's also just, like I said, it's comforting it's just something that I've always been able to kind of ground myself in and also it's really the only thing from my childhood that goes so far back to a really happy moment or really happy connection that I can make. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
