--- a/_items/2019-10-11-0007.md
+++ b/_items/2019-10-11-0007.md
@@ -19,4 +19,4 @@ This is a pin that was created by David Orr.  Orr is a local artist that creates
 
 ## From the Contributor
 
-"It's really easy to fall into a dark place where you feel like you know nothing can change, nothing will get better. And I saw this dinosaur skull that's on fire and I thought about well there used to be a bunch of dinosaurs, a bunch of big old neat dinosaurs running around chomping on things and now there's not. But instead of a bunch of big old dinosaurs chomping on things there's something different. You know, there was this horrible, unimaginable cataclysm that wiped out not just an entire species but an entire mode of life on earth gone except for, you know, the chickens. But then something else happened, you know, and other forms of life came about and human beings came about and so sometimes when I feel like we're just ruining everything, everything is awful, this is a disaster, I remember that in the grand scheme of things, we are very small and it may be that we're not gonna get out of this. It may be that, you know, climate change fueled by political corruption and social apathy and all these things, it's possible, I hope it doesn't happen, but it's possible that we're not gonna get out of it."
+>It's really easy to fall into a dark place where you feel like you know nothing can change, nothing will get better. And I saw this dinosaur skull that's on fire and I thought about well there used to be a bunch of dinosaurs, a bunch of big old neat dinosaurs running around chomping on things and now there's not. But instead of a bunch of big old dinosaurs chomping on things there's something different. You know, there was this horrible, unimaginable cataclysm that wiped out not just an entire species but an entire mode of life on earth gone except for, you know, the chickens. But then something else happened, you know, and other forms of life came about and human beings came about and so sometimes when I feel like we're just ruining everything, everything is awful, this is a disaster, I remember that in the grand scheme of things, we are very small and it may be that we're not gonna get out of this. It may be that, you know, climate change fueled by political corruption and social apathy and all these things, it's possible, I hope it doesn't happen, but it's possible that we're not gonna get out of it. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
