edit prose in markdown files for spelling and clarity, 2019.10.01 and 2019.10.03

--- a/_items/2019-10-01-0006.md
+++ b/_items/2019-10-01-0006.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Guacardo
+title: Guacardo Plush Toy
 author: Marcelino McCrary-Ball
 studentcontributor: Ashley Hennessey
 itemid: 2019-10-01-0006
