--- a/_items/2019-10-01-0015.md
+++ b/_items/2019-10-01-0015.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Dorodango
+title: Dorodango Polished Mudballs
 author: Ashley Hennessey
 studentcontributor: Ashley Hennessey
 itemid: 2019-10-01-0015
