--- a/_items/2019-10-03-0002.md
+++ b/_items/2019-10-03-0002.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Alebrije cat
+title: Alebrije Cat
 author: Matthew Landini
 studentcontributor: Matthew Landini
 itemid: 2019-10-03-0002
