--- a/_items/2019-10-03-0008.md
+++ b/_items/2019-10-03-0008.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Notable Medical Book
+title: Catalog of Notable Medical Books
 author: Matthew Landini
 itemid: 2019-10-03-0008
 imagecredit: Maksymilian Szostalo
@@ -10,18 +10,19 @@ itemsubject: Medical Procedures from J.K. Lilly Jr.'s Collection
 itemdategot: 
 itemindianacity: Bloomington
 itemtype: Phyiscal Object
-shortdesc: A rare medical book that contains a collection of other medical books from the Lily Library
-categories: [ science, rare books, collection, donation, Lily Library, Eli Lily ]
+shortdesc: A rare medical book that contains a collection of other medical books from the Lilly Library
+categories: [ science, rare books, collection, donation, Lilly Library, Eli Lilly ]
 tags: [  ]
 ---
 ## About This Object
 
-This is a medical book from the Lily Library that contains 130 books of medical importance from the collection of J.K. Lily Jr. Inside the bok, there are descriptions and illistrations of these 130 medical book. The book is currently housed in the Lily Library Stacks and can be viewed by students and faculty by appointment here at Indiana University.[^1] 
+This is a medical book from the Lilly Library that contains 130 books of medical importance from the collection of J.K. Lilly, Jr. Inside the book, there are descriptions and illustrations of these 130 medical books. The book is currently housed in the Lilly Library Stacks and can be viewed by students and faculty by appointment here at Indiana University.[^1] 
 
 The other books listed in this collection contain information on a variety of topics that include: ancient efforts on anatomy, physiology, geology, and important breakthroughs in both medicine and how the world works.
 
-## The Collection Donated
-Josiah Kirby Lily Jr. and his family donated a large selection of medical importance to the Lily Library between 1954-1957. The collection consisted of roughly 20,000 books and 17,000 manuscripts that had impacts on the evolution of medicine and science. This donation from the Lily Family inspired then-IU President Herman B Wells to construct the Lily Library which opened its doors in October of 1960.[^2]
+## The Donated Collection
+
+Josiah Kirby Lilly Jr. and his family donated a large selection of medical importance to the Lilly Library between 1954-1957. The collection consisted of roughly 20,000 books and 17,000 manuscripts that had impacts on the evolution of medicine and science. This donation from the Lilly Family inspired then-IU President Herman B Wells to construct the Lilly Library which opened its doors in October of 1960.[^2]
 
 If you would like to view this extensive collection, which includes writings on blood circulation from 1628, Fracastoro's poem on syphilis from 1530, and books on plastic surgery from 1597, the link can be found [here](https://libraries.indiana.edu/lilly-library/medicine-and-science )
 
