--- a/_items/2019-10-03-0013.md
+++ b/_items/2019-10-03-0013.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Necklace
+title: Silver Necklace
 author: Matthew Landini
 itemid: 2019-10-03-0013
 imagecredit: Kalani Craig
