--- a/_items/2019-10-03-0018.md
+++ b/_items/2019-10-03-0018.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Van's Era 
+title: Van's Era Shoes
 author: Paul Centanni
 itemid: 2019-10-03-0018
 itemcontributor: J’essence Reynolds 
