--- a/_items/2019-10-03-0022.md
+++ b/_items/2019-10-03-0022.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Guatemalan beaded lizard keychain
+title: Guatemalan Beaded Lizard Keychain
 author: Paul Centanni
 itemid: 2019-10-03-0022
 imagecredit: 
