fix use of quotation marks in title: field of 2019-10-03-0001.md

--- a/_items/2019-10-03-0001.md
+++ b/_items/2019-10-03-0001.md
@@ -1,11 +1,11 @@
 ---
 layout: item
-title: "21" Hat
+title: 21 Hat
 itemid: 2019-10-03-0001
 itemcontributor: Ethan Shiman
 itemcreator: 21
 itemsubjecturl: 
-itemsubject: "21" hat
+itemsubject: 21 Hat
 itemdate: N/A
 itemtype: Physical Object
 shortdesc: This hat came from a restaurant with tons of mob history in New York City.
