partial edit pass through object markdown files, restructure a few individual files

--- a/_items/2019-10-11-0002.md
+++ b/_items/2019-10-11-0002.md
@@ -5,7 +5,7 @@ author: Matt
 itemid: 2019-10-11-0002
 itemcontributor: Caitlyn Smallwood
 itemcreator:
-itemsubjecturl: ![A Dragon Kimono](/H301HistoryHarvest/assets/items/2019-10-11-0002_5_thumb.jpg)!
+itemsubjecturl:
 itemsubject: Kimono
 itemdate: ca. 1943
 itemtype: Physical Object
@@ -18,6 +18,8 @@ tags: [ sentimentality, kimono, Japan, World War II, Coming of Age Day, Heian Pe
 
 Kimonos like these date back historic times in East Asia for both men and women. In the days and years since World War II, especially in more modern times, they have become a symbol of traditional Japaneseness for women. While men’s attire has taken to the Western standard of suits and ties for their "Coming of Age" Day celebrated on the 15th of January each year, women’s attire has stayed traditional in the form or dawning a Kimono for the occasion.
 
+>My great grandfather was in World War II. He enlisted in 1943, went to Japan, and brought this back with him. When I was 16, I went on a student trip to Japan and he gave me this beautiful Kimono. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
+
 Kimonos have been a huge part of Japanese culture and here is a little secret about kimonos you may have not known about.
 
 https://www.youtube.com/watch?v=M7Cerw3vBCc
@@ -27,7 +29,3 @@ Many Kimonos used for this celebration can cost upwards of ¥1,000,000 (roughly 
 Kimonos are a certain identity for Japan that reaches other continents world-wide.  As these aren't common as before, they are still very proudly worn in different scenarios.  When reading **Kimono and the Construction of Gendered and Cultural Identities** it tells not only about the history but more on how kimonos play into the culture of Japan.  To learn more on Japanese culture, Indiana University Southeast has a [Japan Center](https://www.ius.edu/japan-center/index.html) for students, staff, faculty, and the public to learn more on the Japanese culture.
 
 ![Seeing how a dragon kimono relates to Indiana History](/H301HistoryHarvest/assets/images/Networks.png)!
-
-## From the Contributor
-
->My great grandfather was in World War II. He enlisted in 1943, went to Japan, and brought this back with him. When I was 16, I went on a student trip to Japan and he gave me this beautiful Kimono. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
