--- a/_items/2019-10-10-0001.md
+++ b/_items/2019-10-10-0001.md
@@ -20,7 +20,10 @@ These candy-striped Adidas cleats, with their broken-heart, red laces, and gold 
 
 However, sports isn’t just about representation and societal change. Using sports as a guideline allowed me to explore many other advantages of athletics. Using athletics as an economic benefactor is just another way that that sports can be utilized in society. The Amateur Sports Act of 1978 allowed for sports to provide great economic advantages to Indianapolis. Many cities in Indiana hosted sporting events where athletes were able to do what they love and express themselves how they chose, but also bring in money for the cities and states that they represent. Sports represent a major driving force economically for IU, and players still have the ability to express themselves or their life anyway they may choose. Being able to combine something you love to do, while providing economic benefits, and expressing who you are and what you're about  is something special. 
 
+>The significance. Well, I like to paint and for it to be on cleats I think it’s significant because cleats represent what I love to do, which is football. So, for me to put it on the most important necessity you need to play any sport, which is a pair of cleats, I think it makes it significant that I get to express myself on my footwear. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
+
 ## Creativity Opens the Mind
+### A History Harvest Perspective
 
 These cleats are something that not only expresses the individual, but also showcases that individuals creative.  From the NFL to Pee Wee Football, customizable cleats are all over.  Not only becoming popular in football, other sports have become crazed by the sneaker customization, and some are even making a living off customizing kicks.
 
@@ -29,10 +32,6 @@ These cleats are something that not only expresses the individual, but also show
 Creativity is not only a big part of both the athlete and the artist, but it is also the individuality.  Some cleats are seen as "the same" but others have something that may relate to the athlete in a certain way.  From a childhood memory or something that they have loved forever, the cleats represent the individual in their certain way.  
 
 Individuality is a big part of life and all-around we are thought of as individuals.  From what we eat to what we wear, we each think of ourselves as individuals.  Even back in 1949, the Big Blue Book had a section published called: *The Enemies of Individuality and Mental Freedom: A Lecture on Why the Church Hates Thinkers*.  This book discussed many different avenues on why the church hated individuals.  I think this was the same thing that the NFL head to deal with when thinking about allowing the cleats to be worn during games.  The same thing with the church happened in many different aspects.
-
-## From the Contributor
-
->The significance. Well, I like to paint and for it to be on cleats I think it’s significant because cleats represent what I love to do, which is football. So, for me to put it on the most important necessity you need to play any sport, which is a pair of cleats, I think it makes it significant that I get to express myself on my footwear. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ![Indiana History Network](/H301HistoryHarvest/assets/images/Networks.png)! 
 
